<resources>
    <string name="app_name">InventoryApp</string>
    <string name="category_name_placeholder">Item Name</string>
    <string name="category_price_placeholder">Item Price</string>
    <string name="category_quantity_placeholder">Item Quantity</string>
    <string name="item_one_name">Toaster</string>
    <string name="item_one_price">£10</string>
    <string name="item_one_quantity">5</string>
    <string name="list_button">Sale</string>
    <string name="delete_button">Delete Product</string>
    <string name="order_button">Order From Supplier</string>
    <string name="add_button">+</string>
    <string name="sale_button">-</string>
    <string name="name_edit_text">Name of Product</string>
    <string name="price_edit_text">Price</string>
    <string name="quantity_edit_text">Quantity</string>
    <string name="product_activity">New Product</string>
    <string name="product_detail">Product Detail</string>
    <string name="action_delete_all_entries">Delete All Items</string>
    <string name="editor_activity_title_new_item">Add a new Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and keep editing?</string>
    <string name="discard">Discard</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="keep_editing">Keep editing</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_item_failed">Item deletion failed</string>
    <string name="editor_delete_item_successful">Item successfully deleted</string>
    <string name="editor_update_item_successful">Item updated successfully</string>
    <string name="editor_update_item_failed">Error with updating item</string>
    <string name="editor_insert_item_successful">Item saved</string>
    <string name="editor_insert_item_failed">Error with saving item</string>
    <string name="unknown_item">Unknown item</string>
    <string name="toast_item_out_stock">Item is now out of stock</string>
    <string name="name_field">Name</string>
    <string name="price_field">Price</string>
    <string name="quantity_field">Quantity</string>
    <string name="image_field">Image</string>
    <string name="quantity_minus">-</string>
    <string name="quantity_plus">+</string>
    <string name="button_image">Select Image</string>
    <string name="supplier_email">test@example.com</string>
    <string name="invalid_quantity">Invalid Quantity</string>
    <string name="price_currency">£</string>
    <string name="empty_view_text">No items to display</string>
</resources>
