<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp"
              android:orientation="vertical">

    <EditText
        android:id="@+id/nameEditText"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_edit_text"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_weight="1">
    </Space>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_currency"/>

        <EditText
            android:id="@+id/priceEditText"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/price_edit_text"
            android:inputType="number"/>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_weight="1">
    </Space>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/quantityEditText"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_edit_text"
            android:inputType="number|numberDecimal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/quantityMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_minus"/>

            <Button
                android:id="@+id/quantityPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_plus"/>

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_weight="1">
    </Space>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/imageEdit"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_image"/>

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:src="@drawable/no_image_selected" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_weight="1">
    </Space>

    <Button
        android:id="@+id/orderFromSupplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/order_button"/>

</LinearLayout>