<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/nameEditText"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_edit_text"/>

    <EditText
        android:id="@+id/priceEditText"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/price_edit_text"/>

    <EditText
        android:id="@+id/quantityEditText"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:hint="@string/quantity_edit_text"/>

</LinearLayout>